@@ -14,10 +14,14 @@ import com.opencqrs.framework.metadata.PropagationUtil;
 import com.opencqrs.framework.persistence.CapturedEvent;
 import com.opencqrs.framework.persistence.EventReader;
 import com.opencqrs.framework.persistence.ImmediateEventPublisher;
+import com.opencqrs.framework.tracing.TracingContextSpanBuilder;
+import com.opencqrs.framework.tracing.TracingSpanInformationSource;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BiConsumer;
+import java.util.function.BiFunction;
 import java.util.function.Function;
+import java.util.function.Supplier;
 import java.util.stream.Stream;
 
 /**
@@ -35,6 +39,7 @@ public final class CommandRouter {
     private final StateRebuildingCache stateRebuildingCache;
     private final PropagationMode propagationMode;
     private final Set<String> propagationKeys;
+    private final TracingContextSpanBuilder spanBuilder;
 
     /**
      * Creates a pre-configured instance of {@code this}.
@@ -55,12 +60,14 @@ public final class CommandRouter {
             List<StateRebuildingHandlerDefinition> stateRebuildingHandlerDefinitions,
             StateRebuildingCache stateRebuildingCache,
             PropagationMode propagationMode,
-            Set<String> propagationKeys) {
+            Set<String> propagationKeys,
+            TracingContextSpanBuilder spanBuilder) {
         this.eventReader = eventReader;
         this.immediateEventPublisher = immediateEventPublisher;
         this.stateRebuildingCache = stateRebuildingCache;
         this.propagationMode = propagationMode;
         this.propagationKeys = propagationKeys;
+        this.spanBuilder = spanBuilder;
 
         Set<Class<Command>> ambiguousCommands =
                 findDuplicates(commandHandlerDefinitions.stream().map(CommandHandlerDefinition::commandClass));
@@ -89,7 +96,8 @@ public final class CommandRouter {
             EventReader eventReader,
             ImmediateEventPublisher immediateEventPublisher,
             List<CommandHandlerDefinition> commandHandlerDefinitions,
-            List<StateRebuildingHandlerDefinition> stateRebuildingHandlerDefinitions) {
+            List<StateRebuildingHandlerDefinition> stateRebuildingHandlerDefinitions,
+            TracingContextSpanBuilder spanBuilder) {
         this(
                 eventReader,
                 immediateEventPublisher,
@@ -97,7 +105,8 @@ public final class CommandRouter {
                 stateRebuildingHandlerDefinitions,
                 new NoStateRebuildingCache(),
                 PropagationMode.NONE,
-                Set.of());
+                Set.of(),
+                spanBuilder);
     }
 
     /**
@@ -173,121 +182,149 @@ public final class CommandRouter {
         Optional<List<StateRebuildingHandlerDefinition<Object, Object>>> relevantSRHDs =
                 Optional.ofNullable(stateRebuildingHandlerDefinitions.get(commandHandlerDefinition.instanceClass()));
 
-        var fromCacheMerged = stateRebuildingCache.fetchAndMerge(
-                new StateRebuildingCache.CacheKey<>(
-                        command.getSubject(),
-                        commandHandlerDefinition.instanceClass(),
-                        commandHandlerDefinition.sourcingMode()),
-                cached -> {
-                    Set<Option> options = new HashSet<>();
-                    if (cached.eventId() != null) {
-                        options.add(new Option.LowerBoundExclusive(cached.eventId()));
-                    }
+        AtomicReference<List<CapturedEvent>> eventsPublished = new AtomicReference<>(List.of());
 
-                    EventReader.ClientRequestor clientRequestor =
-                            switch (commandHandlerDefinition.sourcingMode()) {
-                                case NONE -> (client, eventConsumer) -> {};
-                                case LOCAL ->
-                                    (client, eventConsumer) ->
+        Supplier<R> handleCommand = () -> {
+            var fromCacheMerged = stateRebuildingCache.fetchAndMerge(
+                    new StateRebuildingCache.CacheKey<>(
+                            command.getSubject(),
+                            commandHandlerDefinition.instanceClass(),
+                            commandHandlerDefinition.sourcingMode()),
+                    cached -> {
+                        Set<Option> options = new HashSet<>();
+                        if (cached.eventId() != null) {
+                            options.add(new Option.LowerBoundExclusive(cached.eventId()));
+                        }
+
+                        EventReader.ClientRequestor clientRequestor =
+                                switch (commandHandlerDefinition.sourcingMode()) {
+                                    case NONE -> (client, eventConsumer) -> {};
+                                    case LOCAL ->
+                                        (client, eventConsumer) ->
+                                                client.read(command.getSubject(), options, eventConsumer);
+                                    case RECURSIVE ->
+                                        (client, eventConsumer) -> {
+                                            options.add(new Option.Recursive());
                                             client.read(command.getSubject(), options, eventConsumer);
-                                case RECURSIVE ->
-                                    (client, eventConsumer) -> {
-                                        options.add(new Option.Recursive());
-                                        client.read(command.getSubject(), options, eventConsumer);
-                                    };
-                            };
+                                        };
+                                };
 
-                    AtomicReference<String> latestSourcedId = new AtomicReference<>(cached.eventId());
-                    Map<String, String> sourcedSubjectIds = new HashMap<>(cached.sourcedSubjectIds());
-                    List<SourcedEvent> sourcedEvents = new ArrayList<>();
+                        AtomicReference<String> latestSourcedId = new AtomicReference<>(cached.eventId());
+                        Map<String, String> sourcedSubjectIds = new HashMap<>(cached.sourcedSubjectIds());
+                        List<SourcedEvent> sourcedEvents = new ArrayList<>();
 
-                    eventReader.consumeRaw(clientRequestor, (rawCallback, raw) -> {
-                        latestSourcedId.set(raw.id());
-                        sourcedSubjectIds.put(raw.subject(), raw.id());
-                        rawCallback.upcast((upcastedCallback, upcasted) -> upcastedCallback.convert(
-                                (metadata, o) -> sourcedEvents.add(new SourcedEvent(o, metadata, raw))));
-                    });
+                        eventReader.consumeRaw(clientRequestor, (rawCallback, raw) -> {
+                            latestSourcedId.set(raw.id());
+                            sourcedSubjectIds.put(raw.subject(), raw.id());
+                            rawCallback.upcast((upcastedCallback, upcasted) -> upcastedCallback.convert(
+                                    (metadata, o) -> sourcedEvents.add(new SourcedEvent(o, metadata, raw))));
+                        });
 
-                    if (!commandHandlerDefinition.sourcingMode().equals(SourcingMode.NONE)) {
-                        switch (command.getSubjectCondition()) {
-                            case NONE -> {}
-                            case EXISTS -> {
-                                if (!sourcedSubjectIds.containsKey(command.getSubject())) {
-                                    throw new CommandSubjectDoesNotExistException(
-                                            "subject condition violated, no event was sourced matching the subject of"
-                                                    + " the given command: "
-                                                    + command.getClass().getName(),
-                                            command);
+                        if (!commandHandlerDefinition.sourcingMode().equals(SourcingMode.NONE)) {
+                            switch (command.getSubjectCondition()) {
+                                case NONE -> {}
+                                case EXISTS -> {
+                                    if (!sourcedSubjectIds.containsKey(command.getSubject())) {
+                                        throw new CommandSubjectDoesNotExistException(
+                                                "subject condition violated, no event was sourced matching the subject of"
+                                                        + " the given command: "
+                                                        + command.getClass().getName(),
+                                                command);
+                                    }
                                 }
-                            }
-                            case PRISTINE -> {
-                                if (sourcedSubjectIds.containsKey(command.getSubject())) {
-                                    throw new CommandSubjectAlreadyExistsException(
-                                            "subject condition violated, at least one event was sourced matching the"
-                                                    + " subject of given command: "
-                                                    + command.getClass().getName(),
-                                            command);
+                                case PRISTINE -> {
+                                    if (sourcedSubjectIds.containsKey(command.getSubject())) {
+                                        throw new CommandSubjectAlreadyExistsException(
+                                                "subject condition violated, at least one event was sourced matching the"
+                                                        + " subject of given command: "
+                                                        + command.getClass().getName(),
+                                                command);
+                                    }
                                 }
                             }
                         }
-                    }
 
-                    final AtomicReference<Object> instance = new AtomicReference<>(cached.instance());
-                    sourcedEvents.forEach(sourced -> relevantSRHDs.ifPresent(srhds -> Util.applyUsingHandlers(
-                            srhds, instance, sourced.raw.subject(), sourced.event, sourced.metaData, sourced.raw)));
+                        final AtomicReference<Object> instance = new AtomicReference<>(cached.instance());
+                        sourcedEvents.forEach(sourced -> relevantSRHDs.ifPresent(srhds -> Util.applyUsingHandlers(
+                                srhds,
+                                instance,
+                                sourced.raw.subject(),
+                                sourced.event,
+                                sourced.metaData,
+                                sourced.raw,
+                                spanBuilder)));
 
-                    return new StateRebuildingCache.CacheValue<>(
-                            latestSourcedId.get(), instance.get(), sourcedSubjectIds);
-                });
+                        return new StateRebuildingCache.CacheValue<>(
+                                latestSourcedId.get(), instance.get(), sourcedSubjectIds);
+                    });
 
-        var eventCapturer = new CommandEventCapturer<>(
-                fromCacheMerged.instance(), command.getSubject(), relevantSRHDs.orElseGet(List::of));
+            var eventCapturer = new CommandEventCapturer<>(
+                    fromCacheMerged.instance(), command.getSubject(), relevantSRHDs.orElseGet(List::of), spanBuilder);
+            R result =
+                    switch (commandHandlerDefinition.handler()) {
+                        case CommandHandler.ForCommand<Object, Command, R> handler ->
+                            handler.handle(command, eventCapturer);
+                        case CommandHandler.ForInstanceAndCommand<Object, Command, R> handler ->
+                            handler.handle(fromCacheMerged.instance(), command, eventCapturer);
+                        case CommandHandler.ForInstanceAndCommandAndMetaData<Object, Command, R> handler ->
+                            handler.handle(fromCacheMerged.instance(), command, metaData, eventCapturer);
+                    };
 
-        R result =
-                switch (commandHandlerDefinition.handler()) {
-                    case CommandHandler.ForCommand<Object, Command, R> handler ->
-                        handler.handle(command, eventCapturer);
-                    case CommandHandler.ForInstanceAndCommand<Object, Command, R> handler ->
-                        handler.handle(fromCacheMerged.instance(), command, eventCapturer);
-                    case CommandHandler.ForInstanceAndCommandAndMetaData<Object, Command, R> handler ->
-                        handler.handle(fromCacheMerged.instance(), command, metaData, eventCapturer);
-                };
+            if (!eventCapturer.getEvents().isEmpty()) {
+                Map<String, ?> propagationMetaData = new HashMap<>(metaData);
+                propagationMetaData.keySet().retainAll(propagationKeys);
 
-        if (!eventCapturer.getEvents().isEmpty()) {
-            Map<String, ?> propagationMetaData = new HashMap<>(metaData);
-            propagationMetaData.keySet().retainAll(propagationKeys);
+                var events = eventCapturer.getEvents().stream()
+                        .map(it -> new CapturedEvent(
+                                it.subject(),
+                                it.event(),
+                                PropagationUtil.propagateMetaData(it.metaData(), propagationMetaData, propagationMode),
+                                it.preconditions()))
+                        .toList();
 
-            var events = eventCapturer.getEvents().stream()
-                    .map(it -> new CapturedEvent(
-                            it.subject(),
-                            it.event(),
-                            PropagationUtil.propagateMetaData(it.metaData(), propagationMetaData, propagationMode),
-                            it.preconditions()))
-                    .toList();
+                List<Precondition> additionalPreconditions = events.stream()
+                        .map(CapturedEvent::subject)
+                        .filter(subject -> switch (commandHandlerDefinition.sourcingMode()) {
+                            case NONE -> false;
+                            case LOCAL -> subject.equals(command.getSubject());
+                            case RECURSIVE -> subject.startsWith(command.getSubject());
+                        })
+                        .filter(subject -> !fromCacheMerged.sourcedSubjectIds().containsKey(subject))
+                        .map(Precondition.SubjectIsPristine::new)
+                        .collect(toList());
+                switch (command.getSubjectCondition()) {
+                    case PRISTINE ->
+                        additionalPreconditions.add(new Precondition.SubjectIsPristine(command.getSubject()));
+                    case EXISTS ->
+                        additionalPreconditions.add(new Precondition.SubjectIsPopulated(command.getSubject()));
+                }
+                fromCacheMerged.sourcedSubjectIds().entrySet().stream()
+                        .map(e -> new Precondition.SubjectIsOnEventId(e.getKey(), e.getValue()))
+                        .collect(toCollection(() -> additionalPreconditions));
+                events.stream()
+                        .flatMap(e -> e.preconditions().stream())
+                        .collect(toCollection(() -> additionalPreconditions));
+                immediateEventPublisher.publish(events, additionalPreconditions);
 
-            List<Precondition> additionalPreconditions = events.stream()
-                    .map(CapturedEvent::subject)
-                    .filter(subject -> switch (commandHandlerDefinition.sourcingMode()) {
-                        case NONE -> false;
-                        case LOCAL -> subject.equals(command.getSubject());
-                        case RECURSIVE -> subject.startsWith(command.getSubject());
-                    })
-                    .filter(subject -> !fromCacheMerged.sourcedSubjectIds().containsKey(subject))
-                    .map(Precondition.SubjectIsPristine::new)
-                    .collect(toList());
-            switch (command.getSubjectCondition()) {
-                case PRISTINE -> additionalPreconditions.add(new Precondition.SubjectIsPristine(command.getSubject()));
-                case EXISTS -> additionalPreconditions.add(new Precondition.SubjectIsPopulated(command.getSubject()));
+                eventsPublished.set(events);
             }
-            fromCacheMerged.sourcedSubjectIds().entrySet().stream()
-                    .map(e -> new Precondition.SubjectIsOnEventId(e.getKey(), e.getValue()))
-                    .collect(toCollection(() -> additionalPreconditions));
-            events.stream()
-                    .flatMap(e -> e.preconditions().stream())
-                    .collect(toCollection(() -> additionalPreconditions));
-            immediateEventPublisher.publish(events, additionalPreconditions);
-        }
-        return result;
+
+            return result;
+        };
+
+        BiFunction<R, Map<String, String>, Map<String, String>> updateSpanWithPublishedEventCount = (r, si) -> {
+            var updatedSpanInformation = new HashMap<>(si);
+
+            updatedSpanInformation.put(
+                    "events.published", String.valueOf(eventsPublished.get().size()));
+
+            return updatedSpanInformation;
+        };
+
+        return spanBuilder.executeSupplierWithNewSpan(
+                createCommandHandlingSpanInfo(command, commandHandlerDefinition),
+                handleCommand,
+                updateSpanWithPublishedEventCount);
     }
 
     record SourcedEvent(Object event, Map<String, ?> metaData, Event raw) {}
@@ -297,5 +334,32 @@ public final class CommandRouter {
             frequencyMap.values().removeIf(count -> count == 1);
             return frequencyMap.keySet();
         }));
+    }
+
+    private Map<String, String> createCommandHandlingSpanInfo(Command cmd, CommandHandlerDefinition chd) {
+        Map<String, String> result = new HashMap<>(Map.ofEntries(
+                Map.entry("span.name", "command handle"),
+                Map.entry("command.class", cmd.getClass().getName()),
+                Map.entry("command.subject", cmd.getSubject()),
+                Map.entry("command.subjectcondition", cmd.getSubjectCondition().toString()),
+                Map.entry("command.sourcingmode", chd.sourcingMode().toString()),
+                Map.entry("instance.class", chd.instanceClass().getName())));
+
+        switch (chd.handler()) {
+            case TracingSpanInformationSource chSpanInfoSource:
+                StringBuilder spanNameBuilder = new StringBuilder();
+                spanNameBuilder.append(result.get("span.name"));
+                spanNameBuilder.append(" ");
+                spanNameBuilder.append(chSpanInfoSource.getHandlingClassSimpleName());
+                spanNameBuilder.append(".");
+                spanNameBuilder.append(chSpanInfoSource.getHandlingMethodSignature());
+
+                result.replace("span.name", spanNameBuilder.toString());
+                result.put("handler.class", chSpanInfoSource.getHandlingClassFullName());
+                result.put("handling.class", chSpanInfoSource.getHandlingClassFullName());
+                result.put("handling.method", chSpanInfoSource.getHandlingMethodSignature());
+            default:
+                return result;
+        }
     }
 }
